# td

./: .gitignore  build.zig  devenv.nix  flake.nix  pyproject.toml
.devenv/gc/: shell
.direnv/: devenv-profile-7aeaa53f46f0bc1933d60d9edc57c859039f8037.rc  devenv-profile-e2241a8154fb3bb0a34fc557c4e80400f4faea32.rc  flake-profile-1-link
src/: lexer.zig  main.zig  manager.zig  parser.zig  query.zig  test.zig  todo.zig
src/td/: main.py
src/tests/: conftest.py  test_manager.py  test_todo.py
